Fix icons size and alignment

--- a/src/v2/scss/components/_buttons.scss
+++ b/src/v2/scss/components/_buttons.scss
@@ -85,13 +85,18 @@ $button-fill: solid;
   display: inline-block;
   font-weight: $btn-font-weight;
   text-align: center;
-  vertical-align: middle;
+  //vertical-align: middle;
   user-select: none;
   border: $btn-border-width solid transparent;
   overflow: hidden;
   @include button-size(spacer("3x"), spacer("6x"), $font-size-content-base, calculate-input-line-height(48px, spacer("3x")), $btn-border-radius);
   @include transition($btn-transition);
   margin-left: 0;
+
+  .sprite-img {
+    width: calculate-input-line-height(48px, spacer("3x"));
+    height: calculate-input-line-height(48px, spacer("3x"));
+  }
   @include media-breakpoint-up(md) {
     margin-left: 1rem;
     &:first-child {
@@ -108,15 +113,15 @@ $button-fill: solid;
 
   &._big {
     @include button-size(spacer("3x"), spacer("6x"), $font-size-content-base, calculate-input-line-height(56px, spacer("3x")), $btn-border-radius);
-    text-transform: uppercase;
-    letter-spacing: 2px;
   }
 
   &._small {
     @include button-size(spacer("3x"), spacer("4x"), $font-size-sm, calculate-input-line-height(40px, spacer("3x")), $btn-border-radius-sm);
-    text-transform: uppercase;
-    letter-spacing: 2px;
     border-radius: 2rem;
+    .sprite-img {
+      width: calculate-input-line-height(40px, spacer("3x"));
+      height: calculate-input-line-height(40px, spacer("3x"));
+    }
   }
 }
 
