--- a/src/v2/scss/components/_sprites.scss
+++ b/src/v2/scss/components/_sprites.scss
@@ -6,7 +6,7 @@
 // svg sprite dimensions base cls
 .sprite-img {
   display: inline-block;
-  vertical-align: middle;
+  vertical-align: bottom;
 }
 
 .svg-inline {
