--- a/src/v2/scss/layouts/_menu.scss
+++ b/src/v2/scss/layouts/_menu.scss
@@ -255,9 +255,8 @@ $navbar-toggler-border-radius: $border-radius;
 }
 
 .btn.menu-btn-reg {
-  padding: ($nav-link-padding-y / 2) $nav-link-padding-x;
+  padding: $nav-link-padding-y $nav-link-padding-x;
   margin: ($nav-link-padding-y / 2) 0 ($nav-link-padding-y / 2) auto;
-  line-height: $nav-link-line-height - 2 * $input-btn-border-width;
 }
 
 .dropdown-user-menu {
